remove new Double() deprecations