@@ -1286,7 +1286,7 @@ public class Script extends MyThinlet implements Constants {
 
         ScriptableObject.putProperty(scope, "TStringList", Context.javaToJS(stringlist, scope));
 
-        ScriptableObject.putProperty(scope, "PI", Context.javaToJS(new Double(Math.PI), scope));
+        ScriptableObject.putProperty(scope, "PI", Context.javaToJS(Double.valueOf(Math.PI), scope));
 
         ScriptableObject.putProperty(scope, "NXFORMS", Context.javaToJS(Integer.valueOf(NXFORMS), scope));
 
